[package]
name = "arbitrary"
version = "1.0.0-rc1"
authors = ["The rust-fuzz Project Developers", "Simonas Kazlauskas <arbitrary@kazlauskas.me>", "Brian L. Troutwine <brian@troutwine.us>"]
categories = ["development-tools::testing"]
edition = "2018"
keywords = ["arbitrary", "testing"]
readme = "README.md"
description = "The trait for generating structured data from unstructured data"
license = "MIT/Apache-2.0"
repository = "https://github.com/nagisa/rust_arbitrary/"
documentation = "https://docs.rs/arbitrary/"

[dependencies]
derive_arbitrary = { version = "=1.0.0-rc1", path = "./derive", optional = true }

[dev-dependencies]
# Turn on the "derive" feature for doc tests.
arbitrary = { version = "=1.0.0-rc1", path = ".", features = ["derive"] }

[features]
# Turn this feature on to enable support for `#[derive(Arbitrary)]`.
derive = ["derive_arbitrary"]

[[example]]
name = "derive_enum"
required-features = ["derive"]

[workspace]
