[package]
name = "arbitrary"
version = "1.1.3" # Make sure this matches the derive crate version
authors = [
    "The Rust-Fuzz Project Developers",
    "Nick Fitzgerald <fitzgen@gmail.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Simonas Kazlauskas <arbitrary@kazlauskas.me>",
    "Brian L. Troutwine <brian@troutwine.us>",
    "Corey Farwell <coreyf@rwell.org>",
]
categories = ["development-tools::testing"]
edition = "2018"
keywords = ["arbitrary", "testing"]
readme = "README.md"
description = "The trait for generating structured data from unstructured data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-fuzz/arbitrary/"
documentation = "https://docs.rs/arbitrary/"

[dependencies]
derive_arbitrary = { version = "1.1.3", path = "./derive", optional = true }

[dev-dependencies]

[features]
# Turn this feature on to enable support for `#[derive(Arbitrary)]`.
derive = ["derive_arbitrary"]

[[example]]
name = "derive_enum"
required-features = ["derive"]

[[test]]
name = "derive"
path = "./tests/derive.rs"
required-features = ["derive"]

[workspace]
