[package]
name = "derive_arbitrary"
version = "0.2.0" # Make sure it matches the version of the arbitrary crate itself.
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools::testing"]
edition = "2018"
keywords = ["arbitrary", "testing", "derive", "macro"]
readme = "README.md"
description = "Derives arbitrary traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/nagisa/rust_arbitrary"
documentation = "https://docs.rs/arbitrary/"

[dependencies]
proc-macro2 = "0.4"
syn = "0.14"
synstructure = "0.9"

[lib]
proc_macro = true
